classification reports added to evaluation

--- a/cnn_Models_Evaluations.ipynb
+++ b/cnn_Models_Evaluations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,11 +12,35 @@
     "import numpy as np\n",
     "import time\n",
     "import os\n",
+    "import sys\n",
     "\n",
     "from tensorflow.keras.models import load_model\n",
     "from sklearn.metrics import classification_report, confusion_matrix, roc_curve, auc\n",
     "from tensorflow.keras.preprocessing import image\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Stops the print of ms/step\n",
+    "class OutputFilter:\n",
+    "    def __init__(self, stream):\n",
+    "        self.stream = stream\n",
+    "        self.filter_strings = [\"ms/step\"]\n",
+    "\n",
+    "    def write(self, message):\n",
+    "        if not any(f in message for f in self.filter_strings):\n",
+    "            self.stream.write(message)\n",
+    "\n",
+    "    def flush(self):\n",
+    "        self.stream.flush()\n",
+    "\n",
+    "# Save the original stdout so we can restore it later\n",
+    "original_stdout = sys.stdout"
    ]
   },
   {
@@ -501,6 +525,123 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## **CNN Model: Shallow Calibrated vs Deep Calibrated - Classification Performances**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - ETA: 0sSample true labels (Shallow): [16, 17, 1, 13, 9, 5, 6, 7, 3, 17, 17, 4, 12, 6, 6, 1, 6, 17]\n",
+      "Sample predictions (Shallow): [16, 0, 1, 17, 16, 5, 11, 7, 3, 17, 4, 4, 1, 6, 6, 1, 6, 16]\n",
+      "1/1 [==============================] - ETA: 0sSample true labels (Deep): [16, 17, 1, 13, 9, 5, 6, 7, 3, 17, 17, 4, 12, 6, 6, 1, 6, 17]\n",
+      "Sample predictions (Deep): [16, 1, 0, 13, 9, 5, 6, 7, 3, 17, 4, 4, 12, 6, 6, 1, 6, 17]\n",
+      "\n",
+      "\n",
+      "Comparison of Classification Reports\n",
+      "                     Shallow Model                       | Deep Model\n",
+      "                 precision    recall  f1-score   support |                  precision    recall  f1-score   support\n",
+      "                                                         | \n",
+      "           call       0.73      0.83      0.78       728 |            call       0.92      0.84      0.88       728\n",
+      "        dislike       0.79      0.85      0.82       700 |         dislike       0.93      0.93      0.93       700\n",
+      "           fist       0.78      0.82      0.80       721 |            fist       0.87      0.92      0.89       721\n",
+      "           four       0.80      0.66      0.72       719 |            four       0.85      0.89      0.87       719\n",
+      "           like       0.78      0.74      0.76       657 |            like       0.84      0.89      0.87       657\n",
+      "           mute       0.82      0.91      0.86       705 |            mute       0.94      0.96      0.95       705\n",
+      "             ok       0.73      0.72      0.72       672 |              ok       0.90      0.90      0.90       672\n",
+      "            one       0.69      0.70      0.69       741 |             one       0.85      0.81      0.83       741\n",
+      "           palm       0.83      0.72      0.77       703 |            palm       0.93      0.89      0.91       703\n",
+      "          peace       0.69      0.65      0.67       684 |           peace       0.86      0.83      0.84       684\n",
+      " peace_inverted       0.75      0.80      0.77       659 |  peace_inverted       0.87      0.90      0.88       659\n",
+      "           rock       0.85      0.76      0.80       692 |            rock       0.92      0.86      0.89       692\n",
+      "           stop       0.79      0.70      0.74       734 |            stop       0.88      0.87      0.87       734\n",
+      "  stop_inverted       0.75      0.69      0.72       727 |   stop_inverted       0.87      0.89      0.88       727\n",
+      "          three       0.64      0.73      0.68       671 |           three       0.82      0.85      0.83       671\n",
+      "         three2       0.85      0.69      0.76       696 |          three2       0.95      0.89      0.92       696\n",
+      "         two_up       0.68      0.76      0.72       708 |          two_up       0.86      0.88      0.87       708\n",
+      "two_up_inverted       0.64      0.77      0.70       683 | two_up_inverted       0.84      0.90      0.87       683\n",
+      "                                                         | \n",
+      "       accuracy                           0.75     12600 |        accuracy                           0.88     12600\n",
+      "      macro avg       0.75      0.75      0.75     12600 |       macro avg       0.88      0.88      0.88     12600\n",
+      "   weighted avg       0.75      0.75      0.75     12600 |    weighted avg       0.88      0.88      0.88     12600\n",
+      "                                                         | \n"
+     ]
+    }
+   ],
+   "source": [
+    "class_names = ['call','dislike','fist','four','like','mute','ok','one','palm','peace','peace_inverted','rock','stop','stop_inverted','three','three2','two_up','two_up_inverted']\n",
+    "\n",
+    "def get_test_predictions(model, dataset):\n",
+    "    all_predictions = []\n",
+    "    all_labels = []\n",
+    "    # Redirect stdout to filter out unwanted messages during predictions\n",
+    "    sys.stdout = OutputFilter(sys.stdout)\n",
+    "    try:\n",
+    "        for images, labels in dataset:\n",
+    "            predictions = model.predict(images)\n",
+    "            predicted_classes = np.argmax(predictions, axis=1)\n",
+    "            all_predictions.extend(predicted_classes)\n",
+    "            # Convert one-hot labels to indices\n",
+    "            label_indices = np.argmax(labels, axis=1)\n",
+    "            all_labels.extend(label_indices)\n",
+    "    finally:\n",
+    "        # Restore the original stdout\n",
+    "        sys.stdout = original_stdout\n",
+    "    return all_labels, all_predictions\n",
+    "\n",
+    "# Assuming `scratch_model_shallow_calibrated`, `scratch_model_deep_calibrated`, `test_ds_shallow`, `test_ds_deep` are defined\n",
+    "# Get predictions and true labels for shallow model\n",
+    "true_labels_shallow, predictions_shallow = get_test_predictions(scratch_model_shallow, test_ds_shallow)\n",
+    "print(\"Sample true labels (Shallow):\", true_labels_shallow[:18])\n",
+    "print(\"Sample predictions (Shallow):\", predictions_shallow[:18])\n",
+    "\n",
+    "# Get predictions and true labels for deep model\n",
+    "true_labels_deep, predictions_deep = get_test_predictions(scratch_model_deep, test_ds_deep)\n",
+    "print(\"Sample true labels (Deep):\", true_labels_deep[:18])\n",
+    "print(\"Sample predictions (Deep):\", predictions_deep[:18])\n",
+    "\n",
+    "# Function to format the classification report into a list of strings (one per line)\n",
+    "def format_classification_report(report):\n",
+    "    return report.split(\"\\n\")\n",
+    "\n",
+    "# Generate classification reports for both models\n",
+    "report_shallow = classification_report(true_labels_shallow, predictions_shallow, target_names=class_names, output_dict=False)\n",
+    "report_deep = classification_report(true_labels_deep, predictions_deep, target_names=class_names, output_dict=False)\n",
+    "\n",
+    "# Format reports for side-by-side comparison\n",
+    "report_shallow_lines = format_classification_report(report_shallow)\n",
+    "report_deep_lines = format_classification_report(report_deep)\n",
+    "\n",
+    "# Find the maximum line length for the reports\n",
+    "max_len_shallow = max(len(line) for line in report_shallow_lines)\n",
+    "\n",
+    "# Print reports side by side\n",
+    "print(\"\\n\\nComparison of Classification Reports\")\n",
+    "print(f\"{'Shallow Model'.center(max_len_shallow)} | {'Deep Model'}\")\n",
+    "for line_shallow, line_deep in zip(report_shallow_lines, report_deep_lines):\n",
+    "    print(f\"{line_shallow.ljust(max_len_shallow)} | {line_deep}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---\n",
+    "---\n",
+    "---\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# **CNN Models: Shallow Calibrated vs Deep Calibrated**"
    ]
   },
@@ -925,6 +1066,119 @@
     "\n",
     "inference_time_deep_calibrated = measure_inference_time(scratch_model_deep_calibrated, test_ds_deep)\n",
     "print(f\"Inference Time for Deep Model: {inference_time_deep_calibrated:.3f} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **CNN Model: Shallow Calibrated vs Deep Calibrated - Classification Performances**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - ETA: 0sSample true labels (Shallow Calibrated): [16, 17, 1, 13, 9, 5, 6, 7, 3, 17, 17, 4, 12, 6, 6, 1, 6, 17]\n",
+      "Sample predictions (Shallow Calibrated): [16, 0, 1, 13, 9, 5, 6, 7, 3, 17, 4, 4, 1, 6, 6, 1, 6, 17]\n",
+      "1/1 [==============================] - ETA: 0sSample true labels (Deep Calibrated): [16, 17, 1, 13, 9, 5, 6, 7, 3, 17, 17, 4, 12, 6, 6, 1, 6, 17]\n",
+      "Sample predictions (Deep Calibrated): [16, 0, 1, 13, 9, 5, 6, 7, 3, 17, 17, 4, 12, 6, 6, 1, 6, 17]\n",
+      "\n",
+      "\n",
+      "Comparison of Classification Reports\n",
+      "                Shallow Model Calibrated                 | Deep Model Calibrated\n",
+      "                 precision    recall  f1-score   support |                  precision    recall  f1-score   support\n",
+      "                                                         | \n",
+      "           call       0.87      0.92      0.90       728 |            call       0.85      0.91      0.88       728\n",
+      "        dislike       0.90      0.94      0.92       700 |         dislike       0.90      0.93      0.91       700\n",
+      "           fist       0.92      0.89      0.90       721 |            fist       0.87      0.91      0.89       721\n",
+      "           four       0.90      0.90      0.90       719 |            four       0.83      0.87      0.85       719\n",
+      "           like       0.77      0.90      0.83       657 |            like       0.87      0.81      0.84       657\n",
+      "           mute       0.95      0.94      0.94       705 |            mute       0.94      0.93      0.94       705\n",
+      "             ok       0.93      0.90      0.92       672 |              ok       0.84      0.88      0.86       672\n",
+      "            one       0.93      0.79      0.85       741 |             one       0.83      0.78      0.81       741\n",
+      "           palm       0.92      0.91      0.92       703 |            palm       0.90      0.86      0.88       703\n",
+      "          peace       0.89      0.83      0.86       684 |           peace       0.80      0.82      0.81       684\n",
+      " peace_inverted       0.89      0.91      0.90       659 |  peace_inverted       0.83      0.90      0.86       659\n",
+      "           rock       0.96      0.89      0.92       692 |            rock       0.86      0.88      0.87       692\n",
+      "           stop       0.88      0.87      0.88       734 |            stop       0.87      0.81      0.84       734\n",
+      "  stop_inverted       0.84      0.93      0.88       727 |   stop_inverted       0.86      0.80      0.83       727\n",
+      "          three       0.88      0.86      0.87       671 |           three       0.85      0.81      0.83       671\n",
+      "         three2       0.97      0.86      0.91       696 |          three2       0.91      0.88      0.89       696\n",
+      "         two_up       0.84      0.93      0.88       708 |          two_up       0.84      0.83      0.84       708\n",
+      "two_up_inverted       0.87      0.89      0.88       683 | two_up_inverted       0.79      0.85      0.82       683\n",
+      "                                                         | \n",
+      "       accuracy                           0.89     12600 |        accuracy                           0.86     12600\n",
+      "      macro avg       0.90      0.89      0.89     12600 |       macro avg       0.86      0.86      0.86     12600\n",
+      "   weighted avg       0.90      0.89      0.89     12600 |    weighted avg       0.86      0.86      0.86     12600\n",
+      "                                                         | \n"
+     ]
+    }
+   ],
+   "source": [
+    "class_names = ['call','dislike','fist','four','like','mute','ok','one','palm','peace','peace_inverted','rock','stop','stop_inverted','three','three2','two_up','two_up_inverted']\n",
+    "\n",
+    "def get_test_predictions(model, dataset):\n",
+    "    all_predictions = []\n",
+    "    all_labels = []\n",
+    "    # Redirect stdout to filter out unwanted messages during predictions\n",
+    "    sys.stdout = OutputFilter(sys.stdout)\n",
+    "    try:\n",
+    "        for images, labels in dataset:\n",
+    "            predictions = model.predict(images)\n",
+    "            predicted_classes = np.argmax(predictions, axis=1)\n",
+    "            all_predictions.extend(predicted_classes)\n",
+    "            # Convert one-hot labels to indices\n",
+    "            label_indices = np.argmax(labels, axis=1)\n",
+    "            all_labels.extend(label_indices)\n",
+    "    finally:\n",
+    "        # Restore the original stdout\n",
+    "        sys.stdout = original_stdout\n",
+    "    return all_labels, all_predictions\n",
+    "\n",
+    "# Assuming `scratch_model_shallow_calibrated`, `scratch_model_deep_calibrated`, `test_ds_shallow`, `test_ds_deep` are defined\n",
+    "# Get predictions and true labels for shallow model\n",
+    "true_labels_shallow, predictions_shallow = get_test_predictions(scratch_model_shallow_calibrated, test_ds_shallow)\n",
+    "print(\"Sample true labels (Shallow Calibrated):\", true_labels_shallow[:18])\n",
+    "print(\"Sample predictions (Shallow Calibrated):\", predictions_shallow[:18])\n",
+    "\n",
+    "# Get predictions and true labels for deep model\n",
+    "true_labels_deep, predictions_deep = get_test_predictions(scratch_model_deep_calibrated, test_ds_deep)\n",
+    "print(\"Sample true labels (Deep Calibrated):\", true_labels_deep[:18])\n",
+    "print(\"Sample predictions (Deep Calibrated):\", predictions_deep[:18])\n",
+    "\n",
+    "# Function to format the classification report into a list of strings (one per line)\n",
+    "def format_classification_report(report):\n",
+    "    return report.split(\"\\n\")\n",
+    "\n",
+    "# Generate classification reports for both models\n",
+    "report_shallow = classification_report(true_labels_shallow, predictions_shallow, target_names=class_names, output_dict=False)\n",
+    "report_deep = classification_report(true_labels_deep, predictions_deep, target_names=class_names, output_dict=False)\n",
+    "\n",
+    "# Format reports for side-by-side comparison\n",
+    "report_shallow_lines = format_classification_report(report_shallow)\n",
+    "report_deep_lines = format_classification_report(report_deep)\n",
+    "\n",
+    "# Find the maximum line length for the reports\n",
+    "max_len_shallow = max(len(line) for line in report_shallow_lines)\n",
+    "\n",
+    "# Print reports side by side\n",
+    "print(\"\\n\\nComparison of Classification Reports\")\n",
+    "print(f\"{'Shallow Model Calibrated'.center(max_len_shallow)} | {'Deep Model Calibrated'}\")\n",
+    "for line_shallow, line_deep in zip(report_shallow_lines, report_deep_lines):\n",
+    "    print(f\"{line_shallow.ljust(max_len_shallow)} | {line_deep}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **CNN Models: Shallow Calibrated Data Augmentation vs Deep Calibrated Data Augmentation - Training and Validation Accuracy Data Visualization**"
    ]
   },
   {
