--- a/ignore1.ipynb
+++ b/ignore1.ipynb
@@ -778,7 +778,7 @@
     "    return all_labels, all_predictions\n",
     "\n",
     "# Get predictions and true labels\n",
-    "true_labels, predictions = get_test_predictions(scratch_model_light, test_ds)\n",
+    "true_labels, predictions = get_test_predictions(scratch_model_shallow, test_ds)\n",
     "\n",
     "# Print sample true labels and predictions to verify their format\n",
     "print(\"Sample true labels:\", true_labels[:18])\n",
