--- a/cnn_Shallow_Models.ipynb
+++ b/cnn_Shallow_Models.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        " 'two_up_inverted']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1335,6 +1335,264 @@
     "# Save Model: .h5\n",
     "# Saves the Model Weights and Configurations\n",
     "scratch_model_shallow_grayscale.save('h5/scratch_model_shallow_grayscale.h5')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **CNN Model: High Resolution**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# High resolution images\n",
+    "# Image size changed from 64x64 to 128x128\n",
+    "IMG_SIZE_HR = (128, 128) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Dataset: Loading, Splitting, Shuffling, Caching**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 125912 files belonging to 18 classes.\n",
+      "Using 88128 samples in the High Training set High Resolution\n",
+      "Using 25184 samples in the High Validation set High Resolution\n",
+      "Using 12600 samples in the High Test set High Resolution\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load Dataset\n",
+    "dataset_dir = 'dataset/hagridset'\n",
+    "full_ds_hr = tf.keras.utils.image_dataset_from_directory(\n",
+    "    dataset_dir,\n",
+    "    shuffle=True,\n",
+    "    seed=SEED,\n",
+    "    image_size=(IMG_SIZE_HR),\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    label_mode='categorical'\n",
+    ")\n",
+    "\n",
+    "# Split into training, validation, and test sets\n",
+    "train_ratio_hr = 0.7\n",
+    "val_ratio_hr = 0.2\n",
+    "test_ratio_hr = 0.1\n",
+    "\n",
+    "# Total length of the dataset\n",
+    "total_size_hr = len(full_ds_hr)\n",
+    "\n",
+    "# Compute indices for the splits\n",
+    "train_size_hr = int(total_size_hr * train_ratio_hr)\n",
+    "val_size_hr = int(total_size_hr * val_ratio_hr)\n",
+    "test_size_hr = total_size_hr - (train_size_hr + val_size_hr)\n",
+    "\n",
+    "# Split the dataset and shuffle\n",
+    "train_ds_hr = full_ds_hr.take(train_size_hr).shuffle(train_size_hr, seed=SEED)\n",
+    "val_ds_hr = full_ds_hr.skip(train_size_hr).take(val_size_hr).shuffle(val_size_hr, seed=SEED)\n",
+    "test_ds_hr = full_ds_hr.skip(train_size_hr + val_size_hr).shuffle(test_size_hr, seed=SEED)\n",
+    "\n",
+    "# Cache the dataset in memory (or use a directory to store it on disk if necessary)\n",
+    "train_ds_hr = full_ds_hr.take(train_size_hr).shuffle(train_size_hr, seed=SEED).cache().prefetch(buffer_size=AUTOTUNE)\n",
+    "val_ds_hr = full_ds_hr.skip(train_size_hr).take(val_size_hr).shuffle(val_size_hr, seed=SEED).cache().prefetch(buffer_size=AUTOTUNE)\n",
+    "test_ds_hr = full_ds_hr.skip(train_size_hr + val_size_hr).cache().prefetch(buffer_size=AUTOTUNE)\n",
+    "\n",
+    "# Count samples in each subset\n",
+    "def count_samples_hr(dataset):\n",
+    "    sample_count = sum(1 for _ in dataset.unbatch())\n",
+    "    return sample_count\n",
+    "\n",
+    "# Output the number of samples for each dataset\n",
+    "print(f'Using {count_samples_hr(train_ds_hr)} samples in the High Training set High Resolution')\n",
+    "print(f'Using {count_samples_hr(val_ds_hr)} samples in the High Validation set High Resolution')\n",
+    "print(f'Using {count_samples_hr(test_ds_hr)} samples in the High Test set High Resolution')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Dataset: Shallow Grayscale - Save**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_to_save = 'savedDatasetShallowHR'\n",
+    "\n",
+    "tf.data.experimental.save(train_ds_hr, path_to_save + '/train')\n",
+    "tf.data.experimental.save(val_ds_hr, path_to_save + '/val')\n",
+    "tf.data.experimental.save(test_ds_hr, path_to_save + '/test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_1\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " rescaling_1 (Rescaling)     (None, 64, 64, 1)         0         \n",
+      "                                                                 \n",
+      " conv2d_4 (Conv2D)           (None, 64, 64, 32)        320       \n",
+      "                                                                 \n",
+      " batch_normalization_4 (Batc  (None, 64, 64, 32)       128       \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " max_pooling2d_4 (MaxPooling  (None, 32, 32, 32)       0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " dropout_4 (Dropout)         (None, 32, 32, 32)        0         \n",
+      "                                                                 \n",
+      " conv2d_5 (Conv2D)           (None, 32, 32, 64)        18496     \n",
+      "                                                                 \n",
+      " batch_normalization_5 (Batc  (None, 32, 32, 64)       256       \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " max_pooling2d_5 (MaxPooling  (None, 16, 16, 64)       0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " dropout_5 (Dropout)         (None, 16, 16, 64)        0         \n",
+      "                                                                 \n",
+      " conv2d_6 (Conv2D)           (None, 16, 16, 128)       73856     \n",
+      "                                                                 \n",
+      " batch_normalization_6 (Batc  (None, 16, 16, 128)      512       \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " max_pooling2d_6 (MaxPooling  (None, 8, 8, 128)        0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " dropout_6 (Dropout)         (None, 8, 8, 128)         0         \n",
+      "                                                                 \n",
+      " conv2d_7 (Conv2D)           (None, 8, 8, 256)         295168    \n",
+      "                                                                 \n",
+      " batch_normalization_7 (Batc  (None, 8, 8, 256)        1024      \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " max_pooling2d_7 (MaxPooling  (None, 4, 4, 256)        0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " dropout_7 (Dropout)         (None, 4, 4, 256)         0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 4, 4, 256)         65792     \n",
+      "                                                                 \n",
+      " dropout_8 (Dropout)         (None, 4, 4, 256)         0         \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (None, 4096)              0         \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 18)                73746     \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 529,298\n",
+      "Trainable params: 528,338\n",
+      "Non-trainable params: 960\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the CNN Model from Scratch\n",
+    "def build_scratch_cnn_shallow_hr():\n",
+    "    model = models.Sequential()\n",
+    "    model.add(tf.keras.Input(shape=(IMG_SIZE[0], IMG_SIZE[1], 1)))\n",
+    "    # model.add(data_augmentation_layers)\n",
+    "    model.add(layers.Rescaling(1.0 / 255))  # Normalize pixel values\n",
+    "    \n",
+    "    # L1 and L2 regularization is applied to the weights of the layer, with a regularization strength of 0.001.\n",
+    "    # This regularization helps prevent overfitting by penalizing large weights, encouraging the model to learn smaller, more general weights.\n",
+    "    model.add(layers.Conv2D(32, 3, padding='same', activation='relu'))\n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.MaxPooling2D())\n",
+    "    model.add(layers.Dropout(0.1))\n",
+    "    \n",
+    "    model.add(layers.Conv2D(64, 3, padding='same', activation='relu'))\n",
+    "    model.add(layers.BatchNormalization()) \n",
+    "    model.add(layers.MaxPooling2D())\n",
+    "    model.add(layers.Dropout(0.1))\n",
+    "    \n",
+    "    model.add(layers.Conv2D(128, 3, padding='same', activation='relu'))\n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.MaxPooling2D())\n",
+    "    model.add(layers.Dropout(0.1))\n",
+    "\n",
+    "    model.add(layers.Conv2D(256, 3, padding='same', activation='relu'))\n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.MaxPooling2D())\n",
+    "    model.add(layers.Dropout(0.1))\n",
+    "\n",
+    "    # Elastic Net Regularization is applied to the weights of this layer, with a regularization strength of 0.001.\n",
+    "    # This regularization helps prevent overfitting by penalizing large weights, encouraging the model to learn smaller, more general weights.\n",
+    "    model.add(layers.Dense(256, activation='relu', kernel_regularizer=elastic_net_regularizer))\n",
+    "    model.add(layers.Dropout(0.3))\n",
+    "    \n",
+    "    model.add(layers.Flatten())\n",
+    "\n",
+    "    model.add(layers.Dense(num_classes, activation='softmax'))\n",
+    "\n",
+    "    # Compile model with an initial learning rate\n",
+    "    model.compile(\n",
+    "        # Adam optimizer is used with a specified initial learning rate of 0.001. The learning rate\n",
+    "        # controls how much the weights of the model are adjusted relative to the gradient of the loss \n",
+    "        # function. A higher learning rate might converge quickly, but too high can cause the training \n",
+    "        # to diverge. A lower learning rate ensures more reliable convergence but at the risk of slowing\n",
+    "        # down the training process. The chosen rate of 0.001 is a starting point that balances these factors.\n",
+    "        optimizer=tf.keras.optimizers.Adam(learning_rate=0.001),\n",
+    "        loss='categorical_crossentropy',\n",
+    "        metrics=['accuracy']\n",
+    "        )\n",
+    "    \n",
+    "    return model\n",
+    "\n",
+    "# Instantiate and summarize the lighter model\n",
+    "scratch_model_shallow_hr = build_scratch_cnn_shallow_hr()\n",
+    "scratch_model_shallow_hr.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **CNN Model: High Resolution - Training**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train the model\n",
+    "history_shallow_hr = scratch_model_shallow_hr.fit(\n",
+    "    train_ds_hr,\n",
+    "    validation_data=val_ds_hr,\n",
+    "    epochs=10,\n",
+    "    callbacks=callbacks  # Include both callbacks here\n",
+    ")"
    ]
   },
   {
