--- a/cnn_Shallow_Models.ipynb
+++ b/cnn_Shallow_Models.ipynb
@@ -1095,7 +1095,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Dataset: Shallow Grayscale - Save**"
+    "#### **Dataset: Shallow Grayscale - Save**"
    ]
   },
   {
@@ -1244,7 +1244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **CNN Model: Grayscale Training**"
+    "### **CNN Model: Shallow Grayscale - Training**"
    ]
   },
   {
@@ -1313,7 +1313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **CNN Model: Grayscale Save**"
+    "#### **CNN Model: Shallow Grayscale - Save**"
    ]
   },
   {
@@ -1428,7 +1428,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Dataset: Shallow Grayscale - Save**"
+    "#### **Dataset: Shallow High Resolution - Save**"
    ]
   },
   {
@@ -1446,70 +1446,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential_4\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " rescaling_1 (Rescaling)     (None, 64, 64, 1)         0         \n",
+      " rescaling_4 (Rescaling)     (None, 128, 128, 3)       0         \n",
       "                                                                 \n",
-      " conv2d_4 (Conv2D)           (None, 64, 64, 32)        320       \n",
+      " conv2d_16 (Conv2D)          (None, 128, 128, 32)      896       \n",
       "                                                                 \n",
-      " batch_normalization_4 (Batc  (None, 64, 64, 32)       128       \n",
-      " hNormalization)                                                 \n",
+      " batch_normalization_16 (Bat  (None, 128, 128, 32)     128       \n",
+      " chNormalization)                                                \n",
       "                                                                 \n",
-      " max_pooling2d_4 (MaxPooling  (None, 32, 32, 32)       0         \n",
-      " 2D)                                                             \n",
+      " max_pooling2d_16 (MaxPoolin  (None, 64, 64, 32)       0         \n",
+      " g2D)                                                            \n",
       "                                                                 \n",
-      " dropout_4 (Dropout)         (None, 32, 32, 32)        0         \n",
+      " dropout_19 (Dropout)        (None, 64, 64, 32)        0         \n",
       "                                                                 \n",
-      " conv2d_5 (Conv2D)           (None, 32, 32, 64)        18496     \n",
+      " conv2d_17 (Conv2D)          (None, 64, 64, 64)        18496     \n",
       "                                                                 \n",
-      " batch_normalization_5 (Batc  (None, 32, 32, 64)       256       \n",
-      " hNormalization)                                                 \n",
+      " batch_normalization_17 (Bat  (None, 64, 64, 64)       256       \n",
+      " chNormalization)                                                \n",
       "                                                                 \n",
-      " max_pooling2d_5 (MaxPooling  (None, 16, 16, 64)       0         \n",
-      " 2D)                                                             \n",
+      " max_pooling2d_17 (MaxPoolin  (None, 32, 32, 64)       0         \n",
+      " g2D)                                                            \n",
       "                                                                 \n",
-      " dropout_5 (Dropout)         (None, 16, 16, 64)        0         \n",
+      " dropout_20 (Dropout)        (None, 32, 32, 64)        0         \n",
       "                                                                 \n",
-      " conv2d_6 (Conv2D)           (None, 16, 16, 128)       73856     \n",
+      " conv2d_18 (Conv2D)          (None, 32, 32, 128)       73856     \n",
       "                                                                 \n",
-      " batch_normalization_6 (Batc  (None, 16, 16, 128)      512       \n",
-      " hNormalization)                                                 \n",
+      " batch_normalization_18 (Bat  (None, 32, 32, 128)      512       \n",
+      " chNormalization)                                                \n",
       "                                                                 \n",
-      " max_pooling2d_6 (MaxPooling  (None, 8, 8, 128)        0         \n",
-      " 2D)                                                             \n",
+      " max_pooling2d_18 (MaxPoolin  (None, 16, 16, 128)      0         \n",
+      " g2D)                                                            \n",
       "                                                                 \n",
-      " dropout_6 (Dropout)         (None, 8, 8, 128)         0         \n",
+      " dropout_21 (Dropout)        (None, 16, 16, 128)       0         \n",
       "                                                                 \n",
-      " conv2d_7 (Conv2D)           (None, 8, 8, 256)         295168    \n",
+      " conv2d_19 (Conv2D)          (None, 16, 16, 256)       295168    \n",
       "                                                                 \n",
-      " batch_normalization_7 (Batc  (None, 8, 8, 256)        1024      \n",
-      " hNormalization)                                                 \n",
+      " batch_normalization_19 (Bat  (None, 16, 16, 256)      1024      \n",
+      " chNormalization)                                                \n",
       "                                                                 \n",
-      " max_pooling2d_7 (MaxPooling  (None, 4, 4, 256)        0         \n",
-      " 2D)                                                             \n",
+      " max_pooling2d_19 (MaxPoolin  (None, 8, 8, 256)        0         \n",
+      " g2D)                                                            \n",
       "                                                                 \n",
-      " dropout_7 (Dropout)         (None, 4, 4, 256)         0         \n",
+      " dropout_22 (Dropout)        (None, 8, 8, 256)         0         \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 4, 4, 256)         65792     \n",
+      " dense_6 (Dense)             (None, 8, 8, 256)         65792     \n",
       "                                                                 \n",
-      " dropout_8 (Dropout)         (None, 4, 4, 256)         0         \n",
+      " dropout_23 (Dropout)        (None, 8, 8, 256)         0         \n",
       "                                                                 \n",
-      " flatten (Flatten)           (None, 4096)              0         \n",
+      " flatten_3 (Flatten)         (None, 16384)             0         \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 18)                73746     \n",
+      " dense_7 (Dense)             (None, 18)                294930    \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 529,298\n",
-      "Trainable params: 528,338\n",
+      "Total params: 751,058\n",
+      "Trainable params: 750,098\n",
       "Non-trainable params: 960\n",
       "_________________________________________________________________\n"
      ]
@@ -1519,7 +1519,7 @@
     "# Define the CNN Model from Scratch\n",
     "def build_scratch_cnn_shallow_hr():\n",
     "    model = models.Sequential()\n",
-    "    model.add(tf.keras.Input(shape=(IMG_SIZE[0], IMG_SIZE[1], 1)))\n",
+    "    model.add(tf.keras.Input(shape=(IMG_SIZE_HR[0], IMG_SIZE_HR[1], 3)))\n",
     "    # model.add(data_augmentation_layers)\n",
     "    model.add(layers.Rescaling(1.0 / 255))  # Normalize pixel values\n",
     "    \n",
@@ -1577,14 +1577,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **CNN Model: High Resolution - Training**"
+    "### **CNN Model: Shallow High Resolution - Training**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch 1: LearningRateScheduler setting learning rate to 0.0010000000474974513.\n",
+      "Epoch 1/10\n",
+      "2754/2754 [==============================] - 131s 46ms/step - loss: 3.1836 - accuracy: 0.4002 - val_loss: 1.5575 - val_accuracy: 0.6043 - lr: 0.0010\n",
+      "\n",
+      "Epoch 2: LearningRateScheduler setting learning rate to 0.0009900990569281696.\n",
+      "Epoch 2/10\n",
+      "2754/2754 [==============================] - 86s 31ms/step - loss: 1.2311 - accuracy: 0.6969 - val_loss: 0.9722 - val_accuracy: 0.7885 - lr: 9.9010e-04\n",
+      "\n",
+      "Epoch 3: LearningRateScheduler setting learning rate to 0.0009706853341092082.\n",
+      "Epoch 3/10\n",
+      "2754/2754 [==============================] - 68s 25ms/step - loss: 0.9923 - accuracy: 0.7679 - val_loss: 0.8663 - val_accuracy: 0.8142 - lr: 9.7069e-04\n",
+      "\n",
+      "Epoch 4: LearningRateScheduler setting learning rate to 0.0009424129424128428.\n",
+      "Epoch 4/10\n",
+      "2754/2754 [==============================] - 71s 26ms/step - loss: 0.8771 - accuracy: 0.8018 - val_loss: 1.1108 - val_accuracy: 0.7487 - lr: 9.4241e-04\n",
+      "\n",
+      "Epoch 5: LearningRateScheduler setting learning rate to 0.0009061662869778676.\n",
+      "Epoch 5/10\n",
+      "2754/2754 [==============================] - 67s 24ms/step - loss: 0.7935 - accuracy: 0.8230 - val_loss: 0.8530 - val_accuracy: 0.8104 - lr: 9.0617e-04\n",
+      "\n",
+      "Epoch 6: LearningRateScheduler setting learning rate to 0.0008630154964824517.\n",
+      "Epoch 6/10\n",
+      "2754/2754 [==============================] - 66s 24ms/step - loss: 0.7285 - accuracy: 0.8405 - val_loss: 0.7939 - val_accuracy: 0.8264 - lr: 8.6302e-04\n",
+      "\n",
+      "Epoch 7: LearningRateScheduler setting learning rate to 0.0008141655444149982.\n",
+      "Epoch 7/10\n",
+      "2754/2754 [==============================] - 66s 24ms/step - loss: 0.6822 - accuracy: 0.8514 - val_loss: 0.6195 - val_accuracy: 0.8791 - lr: 8.1417e-04\n",
+      "\n",
+      "Epoch 8: LearningRateScheduler setting learning rate to 0.000760902402591761.\n",
+      "Epoch 8/10\n",
+      "2754/2754 [==============================] - 73s 27ms/step - loss: 0.6350 - accuracy: 0.8626 - val_loss: 0.7397 - val_accuracy: 0.8437 - lr: 7.6090e-04\n",
+      "\n",
+      "Epoch 9: LearningRateScheduler setting learning rate to 0.0007045392757626595.\n",
+      "Epoch 9/10\n",
+      "2754/2754 [==============================] - 69s 25ms/step - loss: 0.5978 - accuracy: 0.8717 - val_loss: 0.8335 - val_accuracy: 0.8139 - lr: 7.0454e-04\n",
+      "\n",
+      "Epoch 10: LearningRateScheduler setting learning rate to 0.0006463663297953135.\n",
+      "Epoch 10/10\n",
+      "2754/2754 [==============================] - 70s 25ms/step - loss: 0.5574 - accuracy: 0.8806 - val_loss: 0.5089 - val_accuracy: 0.9045 - lr: 6.4637e-04\n"
+     ]
+    }
+   ],
    "source": [
     "# Train the model\n",
     "history_shallow_hr = scratch_model_shallow_hr.fit(\n",
@@ -1593,6 +1640,34 @@
     "    epochs=10,\n",
     "    callbacks=callbacks  # Include both callbacks here\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **CNN Model: Shallow High Resolution - Save**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save Model: .json\n",
+    "# Saves the Model Architecture\n",
+    "for key in history_shallow_hr.history.keys():\n",
+    "    history_shallow_hr.history[key] = [float(i) for i in history_shallow_hr.history[key]]\n",
+    "\n",
+    "# Write the JSON file\n",
+    "with open('json/cnn_model_shallow_hr.json', 'w') as f:\n",
+    "    json.dump(history_shallow_hr.history, f)\n",
+    "\n",
+    "\n",
+    "# Save Model: .h5\n",
+    "# Saves the Model Weights and Configurations\n",
+    "scratch_model_shallow_hr.save('h5/scratch_model_shallow_hr.h5')"
    ]
   },
   {
