--- a/cnn_Deep_Models.ipynb
+++ b/cnn_Deep_Models.ipynb
@@ -1500,6 +1500,196 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## **CNN Model: Deep High Resolution**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# High resolution images\n",
+    "# Image size changed from 64x64 to 128x128\n",
+    "IMG_SIZE_HR = (128, 128) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **High Resolution Dataset: Loading, Splitting, Shuffling, Caching**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load Dataset\n",
+    "dataset_dir = 'dataset/hagridset'\n",
+    "full_ds_hr = tf.keras.utils.image_dataset_from_directory(\n",
+    "    dataset_dir,\n",
+    "    shuffle=True,\n",
+    "    seed=SEED,\n",
+    "    image_size=(IMG_SIZE_HR),\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    label_mode='categorical'\n",
+    ")\n",
+    "\n",
+    "# Split into training, validation, and test sets\n",
+    "train_ratio_hr = 0.7\n",
+    "val_ratio_hr = 0.2\n",
+    "test_ratio_hr = 0.1\n",
+    "\n",
+    "# Total length of the dataset\n",
+    "total_size_hr = len(full_ds_hr)\n",
+    "\n",
+    "# Compute indices for the splits\n",
+    "train_size_hr = int(total_size_hr * train_ratio_hr)\n",
+    "val_size_hr = int(total_size_hr * val_ratio_hr)\n",
+    "test_size_hr = total_size_hr - (train_size_hr + val_size_hr)\n",
+    "\n",
+    "# Split the dataset and shuffle\n",
+    "train_ds_hr = full_ds_hr.take(train_size_hr).shuffle(train_size_hr, seed=SEED)\n",
+    "val_ds_hr = full_ds_hr.skip(train_size_hr).take(val_size_hr).shuffle(val_size_hr, seed=SEED)\n",
+    "test_ds_hr = full_ds_hr.skip(train_size_hr + val_size_hr).shuffle(test_size_hr, seed=SEED)\n",
+    "\n",
+    "# Cache the dataset in memory (or use a directory to store it on disk if necessary)\n",
+    "train_ds_hr = full_ds_hr.take(train_size_hr).shuffle(train_size_hr, seed=SEED).cache().prefetch(buffer_size=AUTOTUNE)\n",
+    "val_ds_hr = full_ds_hr.skip(train_size_hr).take(val_size_hr).shuffle(val_size_hr, seed=SEED).cache().prefetch(buffer_size=AUTOTUNE)\n",
+    "test_ds_hr = full_ds_hr.skip(train_size_hr + val_size_hr).cache().prefetch(buffer_size=AUTOTUNE)\n",
+    "\n",
+    "# Count samples in each subset\n",
+    "def count_samples_hr(dataset):\n",
+    "    sample_count = sum(1 for _ in dataset.unbatch())\n",
+    "    return sample_count\n",
+    "\n",
+    "# Output the number of samples for each dataset\n",
+    "print(f'Using {count_samples_hr(train_ds_hr)} samples in the High Training set High Resolution')\n",
+    "print(f'Using {count_samples_hr(val_ds_hr)} samples in the High Validation set High Resolution')\n",
+    "print(f'Using {count_samples_hr(test_ds_hr)} samples in the High Test set High Resolution')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Dataset: Deep High Resolution - Save**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_to_save = 'savedDatasetDeepHR'\n",
+    "\n",
+    "tf.data.experimental.save(train_ds_hr, path_to_save + '/train')\n",
+    "tf.data.experimental.save(val_ds_hr, path_to_save + '/val')\n",
+    "tf.data.experimental.save(test_ds_hr, path_to_save + '/test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the CNN Model from Scratch\n",
+    "def build_scratch_cnn_deep_hr():\n",
+    "    model = models.Sequential()\n",
+    "    model.add(tf.keras.Input(shape=(IMG_SIZE_HR[0], IMG_SIZE_HR[1], 3)))\n",
+    "    # model.add(data_augmentation_layers)\n",
+    "    model.add(layers.Rescaling(1.0 / 255))  # Normalize pixel values\n",
+    "    \n",
+    "    model.add(layers.Conv2D(16, 3, padding='same', activation='relu'))  \n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.MaxPooling2D())\n",
+    "    model.add(layers.Dropout(0.1))\n",
+    "    model.add(layers.Conv2D(32, 3, padding='same', activation='relu'))  \n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.MaxPooling2D())\n",
+    "    model.add(layers.Dropout(0.1))\n",
+    "    \n",
+    "    model.add(layers.Conv2D(64, 3, padding='same', activation='relu'))  \n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.MaxPooling2D())\n",
+    "    model.add(layers.Dropout(0.1))\n",
+    "    model.add(layers.Conv2D(128, 3, padding='same', activation='relu'))  \n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.MaxPooling2D())\n",
+    "    model.add(layers.Dropout(0.1))\n",
+    "\n",
+    "    model.add(layers.Conv2D(256, 3, padding='same', activation='relu'))  \n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.MaxPooling2D())\n",
+    "    model.add(layers.Dropout(0.1))\n",
+    "    model.add(layers.Conv2D(512, 3, padding='same', activation='relu'))  \n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.MaxPooling2D())\n",
+    "    model.add(layers.Dropout(0.1))\n",
+    "\n",
+    "    model.add(layers.Dense(512, activation='relu', kernel_regularizer=elastic_net_regularizer))\n",
+    "    model.add(layers.Dropout(0.3))\n",
+    "    \n",
+    "    model.add(layers.Flatten())\n",
+    "\n",
+    "    model.add(layers.Dense(num_classes, activation='softmax'))\n",
+    "\n",
+    "    # Compile model with an initial learning rate\n",
+    "    model.compile(\n",
+    "        # Adam optimizer is used with a specified initial learning rate of 0.001. The learning rate\n",
+    "        # controls how much the weights of the model are adjusted relative to the gradient of the loss \n",
+    "        # function. A higher learning rate might converge quickly, but too high can cause the training \n",
+    "        # to diverge. A lower learning rate ensures more reliable convergence but at the risk of slowing\n",
+    "        # down the training process. The chosen rate of 0.001 is a starting point that balances these factors.\n",
+    "        optimizer=tf.keras.optimizers.Adam(learning_rate=0.001),\n",
+    "        loss='categorical_crossentropy',\n",
+    "        metrics=['accuracy']\n",
+    "        )\n",
+    "    return model\n",
+    "\n",
+    "# Instantiate and summarize the lighter model\n",
+    "scratch_model_deep_hr = build_scratch_cnn_deep_hr()\n",
+    "scratch_model_deep_hr.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **CNN Model: Deep High Resolution - Training**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train CNN Model\n",
+    "history_deep_hr = scratch_model_deep_hr.fit(\n",
+    "    train_ds_hr,\n",
+    "    validation_data=val_ds_hr,\n",
+    "    epochs=10,\n",
+    "    callbacks=callbacks\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **CNN Model: Deep High Resolution - Save**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "\n",
     "\n",
