--- a/cnn_Deep_Models.ipynb
+++ b/cnn_Deep_Models.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1505,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1523,9 +1523,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 125912 files belonging to 18 classes.\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "# Load Dataset\n",
     "dataset_dir = 'dataset/hagridset'\n",
@@ -1677,6 +1696,27 @@
     "    epochs=10,\n",
     "    callbacks=callbacks\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save Model: .json\n",
+    "# Saves the Model Architecture\n",
+    "for key in history_deep_hr.history.keys():\n",
+    "    history_deep_hr.history[key] = [float(i) for i in history_deep_hr.history[key]]\n",
+    "\n",
+    "# Write the JSON file\n",
+    "with open('json/cnn_model_deep_hr.json', 'w') as f:\n",
+    "    json.dump(history_deep_hr.history, f)\n",
+    "\n",
+    "\n",
+    "# Save Model: .h5\n",
+    "# Saves the Model Weights and Configurations\n",
+    "scratch_model_deep_hr.save('h5/scratch_model_deep_hr.h5')"
    ]
   },
   {
